# excubitor

./: .gitignore  .zenodo.json  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  KNOWN-BYPASSES.md  KNOWN-ISSUES.md  LICENSE  README.md  RELATED-WORK.md  SECURITY.md  SPEC.md  THREAT-MODEL.md  denials.fifo  pyproject.toml  requirements-ci.txt
.github/workflows/: ci.yml
brand/: README.md  assemble.py  build_social_preview.py  three_tone.py
docs/audits/: excubitor-2026-07-21-campaign2-gate.md
docs/case-studies/: replit-2025.md
docs/design/: installable-multi-runtime-distribution.md  loop-telos-anchor-deliberation.md  loop-yolo-verifiable-autonomy.md  model-agnostic-runtime.md  ralph-loop-checklist-anchor.md  ralph-loop-decision-handling.md  ralph-loop-green-the-suite.md  ralph-loop-halt-token.md  ralph-loop-learnings-log.md  ralph-loop-one-unit-per-session.md  ralph-loop-session-suspend.md  telos-evidence-tier.md
docs/examples/: policy.toml
docs/security/: 2026-07-16-loop-vc-launcher-prefix-bypass.md
docs/telos/: app.md
excubitor/: __init__.py  cli.py  config.py  probe.py
excubitor/adapters/: __init__.py  claude_code.py
excubitor/commands/: __init__.py  doctor.py  install.py  print_config.py  status.py  uninstall.py
excubitor/core/: __init__.py  dispatch.py  events.py  git_state.py  shell.py
excubitor/core/policies/: __init__.py  default_branch.py  loop_vc.py  one_unit.py  self_integrity.py
excubitor/installers/: __init__.py  doctor.py  filesystem.py  plan.py  receipts.py  runtime.py  status.py  transaction.py  validate.py
excubitor/tests/: test_config.py  test_core_default_branch.py  test_core_dispatch.py  test_core_events.py  test_core_git_state.py  test_core_loop_vc.py  test_core_one_unit.py  test_core_self_integrity.py  test_core_shell.py  test_doctor.py  test_installer_crossplatform.py  test_installer_discovery_plan.py  test_installer_review_regressions.py  test_installer_transaction.py  test_installer_uninstall.py  test_installer_validate_receipts.py  test_probe.py  test_status_printconfig.py
hooks/: _denial_log.py  guard-default-branch.py  guard-loop-vc.py  guard-one-unit.py  guard-self-integrity.py
hooks/tests/: test_adapter_fixtures.py  test_denial_log.py  test_guard_default_branch.py  test_guard_loop_vc.py  test_guard_one_unit.py  test_guard_self_integrity.py
hooks/tests/fixtures/: claude_code_pretooluse.json
packaging/: build.py
packaging/tests/: test_build.py  test_pyz.py
runtime/: spec_adapter.py
runtime/tests/: test_pre_tool_v1.py  test_spec_adapter.py
runtime/tests/fixtures/: pre_tool_v1.json
scripts/: demo.sh  demo.tape  install.sh  install_settings.py  render_demo_svg.py
scripts/tests/: test_install_settings.py
skills/audit-telos/: SKILL.md  telos_check.py
skills/audit-telos/tests/: test_adversarial_records.py  test_telos_check.py
skills/leak-guard/: SKILL.md  leak_check.py
skills/leak-guard/tests/: test_leak_check.py
skills/ralph-loop/: SKILL.md
skills/ralph-loop/scripts/: check_oracle_frozen.py  check_suite_frozen.py  claude_usage.py  run_frozen_oracle.py  suspend_verdict.py
skills/ralph-loop/tests/: test_check_oracle_frozen.py  test_check_suite_frozen.py  test_claude_usage.py  test_run_frozen_oracle.py  test_suspend_verdict.py
skills/telos/: SKILL.md
skills/telos-loop/: SKILL.md
